@@ -300,7 +300,14 @@ Orrock. [David]
 The Bulk Edit and template code textarea fields no longer jump around as you
 type in IE 6. [David]
 
+=item *
+
+List of templates deployed is now reported properly after a successful deploy
+[Paul Orrock]
+
 =back
+
+
 
 =head1 VERSION 1.10.1 (2006-03-20)
 
